# sc_test

./: LICENSE  README.md  simple_fifo.cpp
fifo_clk/: CMakeLists.txt  axis_fifo.h  fifo_clk.h  fifo_clk_ifs.h  main.cpp  main.cpp.bak
simple_fifo/: CMakeLists.txt  main.cpp
